Make header, sidebar, and main body, js components
make sidebar header and main body components, and start the tasks page

--- a/home.html
+++ b/home.html
@@ -92,9 +92,7 @@
       </button>
     </div>
   </div>
-  <div class="main-content">
-
-  </div>
+  <div class="main-content"></div>
 
   <script src="scripts/home.js"></script>
 </body>
