--- a/test.html
+++ b/test.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer src="scripts/test.js"></script>
   <title>testing</title>
   <link rel="stylesheet" href="css-styles/test.css">
 </head>
 <body>
 
-  <script src="scripts/test.js"></script>
 </body>
 </html>
