add background blur functionality to tasks page
allow for dark mode to stay on even when page is refreshed, change input element styles when in dark mode, allow for background to be inactive when setting lists and reminders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css-styles/sidebar.css">
   <link rel="stylesheet" href="css-styles/header.css">
 </head>
-<body class="body">
+<body class="js-body-elements">
 
   <div class="header">
     <div class="header-left-section">
