add notifications and timer delete funtionality
allow for timeouts to be deleted when a task has been deleted. Set up notifications panel and notification count functionality, update header component in javascript

--- a/home.html
+++ b/home.html
@@ -92,7 +92,27 @@
       </button>
     </div>
   </div>
-  <div class="main-content"></div>
+  <!-- <div class="main-content"> -->
+    
+    <div class="home-page">
+      <a style="text-decoration: none; color: var(--secondary-color);" href="tasks.html">
+        <div class="home-section">
+          <div class="icon-section-div">
+            <div class="home-calendar-div">
+              <img class="home-calendar-icon js-icon" src="sources/icons/calendar-icon.svg">
+        
+              <div class="home-date">
+                <p class="js-date-home"></p>
+              </div>
+            </div>
+          </div>
+          <p class="home-section-text">Tasks</p>
+        </div>
+      </a>
+
+
+    </div>
+  <!-- </div> -->
 
   <script src="scripts/home.js"></script>
 </body>
