let notifications popup on icon
must still fix notifications poping up only on one page, seperate functions and javascript code into seperate files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="css-styles/dark-mode-toggle.css">
   <link rel="stylesheet" href="css-styles/sidebar.css">
   <link rel="stylesheet" href="css-styles/header.css">
+
+  <script defer type="module" src="scripts/notifications.js"></script>
+  <script defer type="module" src="scripts/components.js"></script>
+  <script defer type="module" src="scripts/home.js"></script>
 </head>
 <body class="js-body-elements">
 
@@ -19,12 +23,14 @@
       </div>
       <p>Autodidactic scholar</p>
     </div>
+
     <div class="header-middle-section">
       <div class="searchbar">
         <input class="header-input" placeholder="Search" type="text">
         <img class="js-icon header-icons" src="sources/icons/search.svg">
       </div>
     </div>
+
     <div class="header-right-section">
       <div class="notifications-container">
         <a href="notifications.html">
@@ -37,7 +43,9 @@
 
       <img class="js-icon header-icons interactive-icon" src="sources/icons/user-icon.svg">
     </div>
+
   </div>
+
   <div class="sidebar">
     <div class="sidebar-option">
       <img class="js-icon sidebar-icons" src="sources/icons/home.svg">
@@ -105,6 +113,7 @@
       </button>
     </div>
   </div>
+  
   <div class="main-content">
     <div class="home-page">
       <a style="text-decoration: none; color: var(--secondary-color);" href="tasks.html">
@@ -126,8 +135,5 @@
     </div>
   </div>
 
-  <script type="module" src="scripts/notifications.js"></script>
-  <script src="scripts/components.js"></script>
-  <script src="scripts/home.js"></script>
 </body>
 </html>
